--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
             </div>
         </section>
-
+        <!-- REPAIR -->
         <section class="repair">
 
             <div class="container types-of-repair">
@@ -286,6 +286,28 @@
                     <p class="pig-text">Help save 10 - 20% of the <br>
                         cost of materials</p>
                 </div>
+            </div>
+        </section>
+        <!-- WILD FANTASIES -->
+        <section class="fantasies">
+            <div class="container wild-fantasies">
+                <div class="fantasies-header-list">
+                    <h2 class="fantasies-header">WE REALIZE YOUR WILDEST FANTASIES</h2>
+                    <ul class="fantasies-list">
+                        <li class="fantasies__item">American classic</li>
+                        <li class="fantasies__item">Empire</li>
+                        <li class="fantasies__item">Classical</li>
+                        <li class="fantasies__item">Loft</li>
+                        <li class="fantasies__item">Minimalism</li>
+                        <li class="fantasies__item">Provence</li>
+                        <li class="fantasies__item">Romanticism</li>
+                        <li class="fantasies__item">Scandinavian style</li>
+                        <li class="fantasies__item">Mediterranean style</li>
+                        <li class="fantasies__item">High tech</li>
+                        <li class="fantasies__item">Eclecticism</li>
+                    </ul>
+                </div>
+
             </div>
         </section>
     </main>
