--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         <section class="fantasies">
             <div class="container wild-fantasies">
                 <div class="fantasies-header-list">
-                    <h2 class="fantasies-header">WE REALIZE YOUR WILDEST FANTASIES</h2>
+                    <h2 class="fantasies-header">WE REALIZE YOUR <br> WILDEST FANTASIES</h2>
                     <ul class="fantasies-list">
                         <li class="fantasies__item">American classic</li>
                         <li class="fantasies__item">Empire</li>
@@ -307,8 +307,17 @@
                         <li class="fantasies__item">Eclecticism</li>
                     </ul>
                 </div>
+                <div class="left-images">
+                    <div class="first-limage"></div>
+                    <div class="second-limage"></div>
+                </div>
+                <div class="right-images">
+                    <div class="first-rimage"></div>
+                    <div class="second-rimage"></div>
+                </div>
 
             </div>
+            <div class="fantasies-overlay"></div>
         </section>
     </main>
 </body>
