--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li class="header-navigation__item">
                         <a href="#measurement">MEASUREMENT</a>
                     </li>
-                    <li class="header-navigation__item"><a href="#team">TEAM</a></li>
+                    <li class="header-navigation__item team"><a href="#team">TEAM</a></li>
                     <li class="header-navigation__item">
                         <a href="#reviews">REVIEWS</a>
                     </li>
@@ -91,22 +91,22 @@
                         <div class="admiral-location">
                             <div class="admiral-area">
                                 <h3>CITY:</h3>
-                                <span class="admiral-text">Rostov-on-Don <br />
-                                    LCD admiral</span>
+                                <p class="admiral-text">Rostov-on-Don <br />
+                                    LCD admiral</p>
                             </div>
                             <div class="admiral-area">
                                 <h3>APARTMENT AREA:</h3>
-                                <span class="admiral-text">81 m2</span>
+                                <p class="admiral-text">81 m2</p>
                             </div>
                         </div>
                         <div class="admiral-location2">
                             <div class="admiral-area">
                                 <h3>REPAIR TIME:</h3>
-                                <span class="admiral-text">3.5 months</span>
+                                <p class="admiral-text">3.5 months</p>
                             </div>
                             <div class="admiral-area">
                                 <h3>REPAIR COST:</h3>
-                                <span class="admiral-text">Upon request</span>
+                                <p class="admiral-text">Upon request</p>
                             </div>
                         </div>
                         <div class="arrow">
@@ -319,7 +319,7 @@
             </div>
         </section>
         <!-- WILD FANTASIES -->
-        <section class="fantasies">
+        <section id="team" class="fantasies">
             <div class="container wild-fantasies">
                 <div class="fantasies-header-list">
                     <h2 class="fantasies-header">
@@ -344,7 +344,7 @@
                     <div class="first-limage"></div>
                     <div class="second-limage"></div>
                 </div>
-                <div id="team" class="right-images">
+                <div class="right-images">
                     <div class="first-rimage"></div>
                     <div class="second-rimage"></div>
                 </div>
