--- a/index.html
+++ b/index.html
@@ -90,22 +90,22 @@
                         </p>
                         <div class="admiral-location">
                             <div class="admiral-area">
-                                <h3>CITY:</h3>
+                                <h3 class="h3">CITY:</h3>
                                 <p class="admiral-text">Rostov-on-Don <br />
                                     LCD admiral</p>
                             </div>
                             <div class="admiral-area">
-                                <h3>APARTMENT AREA:</h3>
+                                <h3 class="h3">APARTMENT AREA:</h3>
                                 <p class="admiral-text">81 m2</p>
                             </div>
                         </div>
                         <div class="admiral-location2">
                             <div class="admiral-area">
-                                <h3>REPAIR TIME:</h3>
+                                <h3 class="h3">REPAIR TIME:</h3>
                                 <p class="admiral-text">3.5 months</p>
                             </div>
                             <div class="admiral-area">
-                                <h3>REPAIR COST:</h3>
+                                <h3 class="h3">REPAIR COST:</h3>
                                 <p class="admiral-text">Upon request</p>
                             </div>
                         </div>
@@ -305,7 +305,7 @@
                             </label>
                         </div>
                         <form class="form-button">
-                            <input class="input-online repair-button-form" type="submit" value="Submit" />
+                            <input class="input-online repair-button-form" type="submit" value="Call the measurer" />
                         </form>
                     </div>
                 </div>
@@ -512,7 +512,7 @@
                         <li class="footer-navigation__item">
                             <a href="#measurement">MEASUREMENT</a>
                         </li>
-                        <li class="footer-navigation__item"><a href="#team">TEAM</a></li>
+                        <li class="footer-navigation__item team"><a href="#team">TEAM</a></li>
                         <li class="footer-navigation__item">
                             <a href="#reviews">REVIEWS</a>
                         </li>
