--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
                         <p class="project-text">
                             Only a small part of the work performed by our company is
                             presented on the site. For 14 years on in the construction
-                            <br />
                             market we have made happy more than 1000 families
                         </p>
                         <div class="admiral-location">
@@ -125,11 +124,14 @@
         <!-- ONLINE CONTROL -->
         <section class="control">
             <div class="container online-control">
-                <h3 class="online-header">ONLINE CONTROL</h3>
-                <div class="image-control">
-                    <img src="svg/cam-stick.svg" alt="cam-stick" />
-                    <img src="svg/camera.svg" alt="camera" />
-                    <img src="svg/cam-stick.svg" alt="cam-stick" />
+                <div class="online-control-header">
+                    <h3 class="online-header">ONLINE CONTROL</h3>
+                    <div class="image-control">
+                        <!-- <img src="svg/cam-stick.svg" alt="cam-stick" />
+                        <img src="svg/camera.svg" alt="camera" />
+                        <img src="svg/cam-stick.svg" alt="cam-stick" /> -->
+                        <img class="camera-sticks" src="svg/camera sticks.svg" alt="cam-stick">
+                    </div>
                 </div>
 
                 <div class="online-container">
@@ -137,7 +139,7 @@
                     <img class="image-online" src="images/online-control.jpg" alt="online" />
                 </div>
 
-                <img class="stick" src="svg/stick.svg" alt="stick" />
+                <!-- <img class="stick" src="svg/stick.svg" alt="stick" /> -->
                 <div class="container-text">
                     <p class="online-text">
                         At each facility, a camera is installed that broadcasts the
@@ -160,6 +162,12 @@
                         <input class="input-online-form" type="tel" id="phone" name="phone"
                             placeholder="Your phone number:" />
                     </form>
+                    <div class="online-checkbox-mobile">
+                        <form action="#">
+                            <input class="checkbox-first" type="checkbox" id="vehicle1" name="online" value="online" />
+                            <label for="online">I agree to the processing of personal data</label><br />
+                        </form>
+                    </div>
                     <form>
                         <input class="input-online" type="submit" value="Submit" />
                     </form>
@@ -326,6 +334,7 @@
                         WE REALIZE YOUR <br />
                         WILDEST FANTASIES
                     </h2>
+                    <img class="wild-img-mobile" src="images/fantasies.jpg" alt="wild">
                     <ul class="fantasies-list">
                         <li class="fantasies__item">American classic</li>
                         <li class="fantasies__item">Empire</li>
@@ -495,6 +504,13 @@
                         <img src="svg/contacts.svg" alt="" />
                     </div>
                     <div class="map-image"></div>
+                    <h2 class="map-header-mobile">
+                        Rostov-on-Don, Nansen St., 239 Shopping Center <br />
+                        Decorum Tel +7 (928) 768 32 29
+                    </h2>
+                    <div class="img-map-mobile">
+                        <img src="svg/contacts.svg" alt="" />
+                    </div>
                 </div>
             </div>
         </section>
